Bug #50326: fix python3 syntax errors

--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -44,6 +44,7 @@ Depends: ${python:Depends},
  python-univention (>= 12.0.0-5),
  python-univention-lib,
  python-lazy-object-proxy,
+ python-six,
 Provides: ${python:Provides},
 Description: UCS@school: Importing objects like users and computers
  This package provides scripts for importing objects like users, groups,
@@ -62,6 +63,7 @@ Depends: ${python:Depends},
  python3-univention (>= 12.0.0-5),
  python3-univention-lib,
  python3-lazy-object-proxy,
+ python3-six,
 Provides: ${python:Provides},
 Description: UCS@school: Importing objects like users and computers
  This package provides scripts for importing objects like users, groups,
