Bug #50328: add python-setuptools build dependency

--- a/ucs-school-lib/debian/control
+++ b/ucs-school-lib/debian/control
@@ -6,6 +6,8 @@ Build-Depends:
  debhelper (>= 8),
  python-debian,
  python3-debian,
+ python-setuptools,
+ python3-setuptools,
  dh-python,
  ucslint,
  univention-config-dev,
