Bug #50326: Update branchtesttemplate

--- a/test/branch-tests/base/school-singlemaster.cfg
+++ b/test/branch-tests/base/school-singlemaster.cfg
@@ -15,7 +15,7 @@ kvm_extra_label: appliance-test-ucs
 kvm_template: branchtest
 kvm_operating_system: Others
 kvm_architecture: amd64
-kvm_ucsversion: 4.4-0+e0
+kvm_ucsversion: 4.4-2+e287-V2
 
 recover: 2
 
