--- a/test/branch-tests/base/school-singlemaster.cfg
+++ b/test/branch-tests/base/school-singlemaster.cfg
@@ -12,8 +12,8 @@ kvm_interface: eth0
 kvm_extra_label: appliance-test-ucs
 
 # template configuration
-kvm_template: branchtest
-kvm_operating_system: Others
+kvm_template: generic-unsafe
+kvm_operating_system: UCS
 kvm_architecture: amd64
 kvm_ucsversion: 4.4-2+e287-V2
 
