--- a/ucs-school-netlogon-user-logonscripts/debian/control
+++ b/ucs-school-netlogon-user-logonscripts/debian/control
@@ -11,6 +11,7 @@ Build-Depends:
  python-debian,
  python-all,
  python3-all,
+ python3-debian,
 Standards-Version: 3.8.2
 
 Package: ucs-school-netlogon-user-logonscripts
