Bug #50327, #50329: add DH_VERBOSE=1

--- a/ucs-school-netlogon-user-logonscripts/debian/rules
+++ b/ucs-school-netlogon-user-logonscripts/debian/rules
@@ -29,6 +29,7 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 
+export DH_VERBOSE=1
 export PYBUILD_NAME=ucs-school-netlogon-user-logonscripts
 
 override_dh_auto_test:
