--- a/ucs-school-radius-802.1x/debian/rules
+++ b/ucs-school-radius-802.1x/debian/rules
@@ -31,6 +31,7 @@
 # /usr/share/common-licenses/AGPL-3; if not, see
 # <http://www.gnu.org/licenses/>.
 
+export DH_VERBOSE=1
 export PYBUILD_NAME=ucs-school-radius-802.1x
 
 override_dh_auto_install:
