Bug #50328: Add break because /etc/ucsschool/logging.yaml moved package

--- a/ucs-school-lib/debian/control
+++ b/ucs-school-lib/debian/control
@@ -99,6 +99,7 @@ Package: ucs-school-lib-common
 Architecture: all
 Depends:
  ${misc:Depends}
+Breaks: python-ucs-school (<< 17.0.100),
 Description: UCS@school - common files of ucs-school-lib
  This package contains files used by multiple ucs-school-lib
  packages.
