Bug #47418: fix dependency

--- a/ucs-school-umc-computerroom/debian/control
+++ b/ucs-school-umc-computerroom/debian/control
@@ -21,7 +21,7 @@ Depends: ${misc:Depends},
  univention-config-registry,
  python-univention-lib,
  ucs-school-umc-common,
- python-ucs-school,
+ python-ucs-school (>= 12.1.9),
  shell-ucs-school,
  python-univention-directory-manager,
  italc-master,
