--- a/univention-management-console-module-selective-udm/debian/control
+++ b/univention-management-console-module-selective-udm/debian/control
@@ -13,7 +13,7 @@ XS-Python-Version: all
 Package: univention-management-console-module-selective-udm
 Architecture: all
 Depends: python-univention-connector-s4,
- python-ucs-school
+ python-ucs-school (>= 12.1.9),
 Recommends: univention-management-console-server,
 Description: UMC module for slaves with a selective replicated LDAP
  This package contains the UMC module which offers domain management
