--- a/ucs-school-roleshares/debian/control
+++ b/ucs-school-roleshares/debian/control
@@ -13,7 +13,7 @@ Package: ucs-school-roleshares
 Architecture: all
 Depends: ${misc:Depends},
  univention-config-registry,
- python-ucs-school (>= 5.0.3-20)
+ python-ucs-school (>= 12.1.9),
 Description: UCS@school role shares
  This package contains support for UCS@school role shares.
  .
