--- a/ucs-school-s4-branch-site/debian/control
+++ b/ucs-school-s4-branch-site/debian/control
@@ -13,7 +13,7 @@ Package: ucs-school-s4-branch-site
 Architecture: all
 Depends: ${misc:Depends},
  univention-config-registry,
- python-ucs-school (>= 5.0.3-20),
+ python-ucs-school (>= 12.1.9),
  univention-s4-connector,
 Description: UCS@school Samba4 branch site configuration
  This package contains support for UCS@school Samba4 branch site configuration.
