--- a/ucs-school-umc-groups/debian/control
+++ b/ucs-school-umc-groups/debian/control
@@ -18,7 +18,7 @@ Depends: ${misc:Depends},
  univention-management-console,
  univention-config-registry,
  ucs-school-umc-common,
- python-ucs-school,
+ python-ucs-school (>= 12.1.9),
  shell-ucs-school,
  python-univention-directory-manager,
  univention-directory-manager-tools
