--- a/ucs-school-umc-import/debian/control
+++ b/ucs-school-umc-import/debian/control
@@ -17,6 +17,7 @@ Depends: ${misc:Depends},
  univention-management-console-server,
  ucs-school-import-http-api-client (>= 17.0.6-15),
  ucs-school-import-http-api-common (>= 17.0.6-15),
+ python-ucs-school (>= 12.1.9),
 Description: Automatic UCS@school user import
  Automatic UCS@school user import
  .
