--- a/ucs-school-umc-wizards/debian/control
+++ b/ucs-school-umc-wizards/debian/control
@@ -20,7 +20,7 @@ Depends: ${misc:Depends},
  univention-directory-manager-tools (>> 7.0.147),
  python-univention-directory-manager,
  ucs-school-umc-common,
- python-ucs-school,
+ python-ucs-school (>= 12.1.9),
  shell-ucs-school,
  python-apt
 Description: UCS@school UMC wizard modules
