--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,10 +3,11 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-exam
-fix: 9.0.1-16A~4.4.0.201909161607
+fix: 9.0.1-18A~4.4.0.201911050930
 desc: |
  * During an exam the exam folder in the exam users home cannot be removed or renamed anymore.
    This change prevents problems collecting the exam if the exam folder has been accidentally modified (Bug #49953).
  * A login restrictions for exam and original users during running exams (Bug #49960).
  * A proper error message is shown, when trying to create an exam with a name that is already in use (Bug #49902).
-bug: [49953, 49960, 49902]
+ * Internal improvement: separate UMC and non-UMC code in schoolldap module (Bug #47418).
+bug: [47418, 49953, 49960, 49902]
