--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -5,5 +5,7 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-metapackage
 fix: 12.0.2-5A~4.4.0.201909261042
 desc: |
- * The containers "Managed Service Accounts" and "PSPs" new created before provisioning samba (Bug #48752).
+ * The containers <literal>Managed Service Accounts</literal> and <literal>PSPs</literal> within the LDAP base were
+   frequent triggers for rejects of the S4 connector. The two containers are now created before Samba 4 is
+   provisioned, so this error no longer occurs (Bug #48752).
 bug: [48752]
