--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -6,5 +6,7 @@ src: ucs-school-umc-computerroom
 fix: 11.0.0-11A~4.4.0.201911070856
 desc: |
  * Internal improvement: separate UMC and non-UMC code in schoolldap module (Bug #47418).
- * Create UCRV to toggle PC restart screen during exam start (Bug #49961)
+ * When exiting the class work mode, a reboot of Windows computers is no longer mandatory, depending on the configuration.
+   Therefore, the UCR variable <envar>ucsschool/exam/default/show/restart</envar> is now evaluated when exiting the
+   class work mode and the corresponding dialog is only displayed if required (Bug #49961).
 bug: [47418, 49961]
