--- a/doc/errata/staging/ucs-school-umc-exam.yaml
+++ b/doc/errata/staging/ucs-school-umc-exam.yaml
@@ -3,12 +3,24 @@ release: "4.4"
 version: [0]
 scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-umc-exam
-fix: 9.0.1-20A~4.4.0.201911111320
+fix: 9.0.1-21A~4.4.0.201911131224
 desc: |
- * During an exam the exam folder in the exam users home directory cannot be removed or renamed anymore.
-   This change prevents problems collecting the exam if the exam folder has been accidentally modified (Bug #49953).
- * A login restrictions for exam and original users during running exams (Bug #49960).
- * A proper error message is shown, when trying to create an exam with a name that is already in use (Bug #49902).
+ * During an exam the exam folder in the exam user's home directory cannot be removed or renamed anymore.
+   This change prevents problems while collecting the exam results if the exam folder has been accidentally
+   renamed, moved or deleted (Bug #49953).
+ * Previously, the logon restriction of users during an exam had to be implemented using computer-related GPOs.
+   Starting with this release, when an exam is started, the user object of both the exam user
+   and the original user is automatically adjusted to restrict the logon of these users.
+   The exam user may only log on to the Windows computers of the room in which the exam is written.
+   For the corresponding original user, the login on all Windows systems of the domain is locked during the exam.
+   This logon restriction only affects the Windows computers of the UCS@school domain. Similar to the previous GPO
+   policy, it does not affect external services or non-Windows systems (Bug #49960).
+ * The above-mentioned change to the logon restrictions  eliminates in most cases the need for computer-related GPOs.
+   For new installations of UCS@school, the reboot for Windows computers is no longer offered/forced when starting an
+   exam. The step is then skipped when starting a test. On existing UCS@school installations, the UCR variable
+   <envar>ucsschool/exam/default/show/restart</envar> is automatically set to <literal>yes</literal> to retain the old behavior.
+   Therefore, when reinstalling a UCS@school system or adding additional school servers, make sure that the UCR
+   variable is set appropriately on all systems (Bug #49961).
+ * A proper error message is now shown, when trying to create an exam with a name that is already in use (Bug #49902).
  * Internal improvement: separate UMC and non-UMC code in schoolldap module (Bug #47418).
- * Create UCRV to toggle PC restart screen during exam start (Bug #49961)
 bug: [47418, 49953, 49960, 49902, 49961]
