--- a/ucs-school-umc-diagnostic/debian/control
+++ b/ucs-school-umc-diagnostic/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
  dh-python,
- univention-management-console-dev, # (>= 11.0.4-37),
+ univention-management-console-dev,
  python-all,
  python3-all,
  ucslint,
