--- a/doc/errata/staging/ucs-school-umc-computerroom.yaml
+++ b/doc/errata/staging/ucs-school-umc-computerroom.yaml
@@ -7,7 +7,7 @@ fix: 11.0.0-14A~4.4.0.201911182308
 desc: |
  * Until now, wake-on-LAN packets were only sent out via an external tool via the network interface to which the
    default route was assigned. The UMC module <package>computerroom</package> now creates these packages itself
-   and sends them by default on <emphasis>all<emphasis> interfaces unless the interface is on a blacklist (see UCR variables
+   and sends them by default on <emphasis>all</emphasis> interfaces unless the interface is on a blacklist (see UCR variables
    <envar>ucsschool/umc/computerroom/wakeonlan/blacklisted/interfaces</envar> and
    <envar>ucsschool/umc/computerroom/wakeonlan/blacklisted/interface_prefixes</envar>) (Bug #49970).
 bug: [49970]
