--- a/kelvin-api/requirements.txt
+++ b/kelvin-api/requirements.txt
@@ -2,11 +2,13 @@ aiofiles
 async-lru
 async-property
 diskcache
-fastapi==0.39.0
+fastapi==0.42.0
 lazy-object-proxy
 ldap3
+pyasn1-modules>=0.2.7
+pyasn1<0.5.0,>=0.4.6
+pydantic[ujson,email]==0.32.2
 pyjwt
-pydantic[ujson,email]
 python-multipart
 ucs-school-lib
 univention-config-registry
