update fastapi and pydantic

--- a/kelvin-api/requirements.txt
+++ b/kelvin-api/requirements.txt
@@ -2,15 +2,16 @@ aiofiles
 async-lru
 async-property
 diskcache
-fastapi==0.42.0
+fastapi==0.44.0
 lazy-object-proxy
 ldap3
 pyasn1-modules>=0.2.7
 pyasn1<0.5.0,>=0.4.6
-pydantic[ujson,email]==0.32.2
+pydantic[email]>=1.0
 pyjwt
 python-multipart
 ucs-school-lib
 udm-rest-client
+ujson
 univention-config-registry
 uvicorn
