fix tests and linting

--- a/kelvin-api/setup.cfg
+++ b/kelvin-api/setup.cfg
@@ -2,9 +2,12 @@
 test = pytest
 
 [tool:pytest]
-addopts = --verbose --showlocals --cov=tests --cov=ucsschool.kelvin tests
+addopts = --verbose --showlocals tests
+usefixtures = setup_environ setup_logging
+
 [flake8]
-max-line-length = 90
+max-line-length = 100
+ignore = W503
 
 [coverage:report]
 exclude_lines =
