use correct UCRV, add some tests

--- a/kelvin-api/setup.cfg
+++ b/kelvin-api/setup.cfg
@@ -2,7 +2,7 @@
 test = pytest
 
 [tool:pytest]
-addopts = --verbose --showlocals tests
+addopts = --verbose --showlocals
 usefixtures = setup_environ setup_logging
 
 [flake8]
