Bug #50280: enhance migration script
1. use ldap filter escaping
2. use pure python instead of subprocess for ldap search and modifications
3. use binary logic for enabling and disabling bits

--- a/ucs-school-import/debian/control
+++ b/ucs-school-import/debian/control
@@ -26,6 +26,8 @@ Depends: univention-directory-manager,
  python-univention,
  python-univention-lib,
  python-lazy-object-proxy,
+ python-ldap,
+ python-univention-config-registry,
 Description: UCS@school: Importing objects like users and computers
  This package provides scripts for importing objects like users, groups,
  networks and computers.
