--- a/doc/errata/staging/ucs-school-metapackage.yaml
+++ b/doc/errata/staging/ucs-school-metapackage.yaml
@@ -5,9 +5,8 @@ scope: ucs_4.4-0-ucs-school-4.4
 src: ucs-school-metapackage
 fix: 12.0.2-6A~4.4.0.201912051307
 desc: |
- * During a re-join of DC School Slaves, userAccountControl was set to demote these Objects,
-   which caused them to be recognized as Windows Host Objects by the s4connector.
-   The s4connector then appended the ucsschoolRole win_computer.
-   This behaviour has been removed.
-   (Bug #50280).
+ * During a re-join of DC school slaves, the LDAP attribute <literal>userAccountControl</literal> was set to demote these objects,
+   which caused them to be recognized as normal Windows Host Objects by the S4 Connector.
+   The S4 Connector then mistakenly appended the value <literal>win_computer</literal> to the LDAP attribute <literal>ucsschoolRole</literal>.
+   This faulty behaviour has been fixed (Bug #50280).
 bug: [50280]
