Bug #50700: improve test setup

--- a/kelvin-api/setup.cfg
+++ b/kelvin-api/setup.cfg
@@ -3,7 +3,7 @@ test = pytest
 
 [tool:pytest]
 addopts = --verbose --showlocals
-usefixtures = setup_environ setup_logging add_udm_properties_to_import_config
+usefixtures = setup_environ setup_logging setup_import_config
 
 [tool:isort]
 known_first_party=ucsschool,udm_rest_client,univention
